cloudclapp-wf-master/Terraform_Configuration_Templates/Applications/Catalogs/msa-docker/kubernetes/msa-azure-aks-manifest-files/quickstart-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: quickstart-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/quickstart-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/quickstart-default: "true"
